- MUI primitives: `Drawer`, `Paper`, `Stack`, `List`, `ListItemButton`, `ListItemIcon`, `ListItemText`, `InputBase`, `IconButton`, `Tooltip`, `Chip`, `Divider`, `Typography`.
- Custom work: Searchable task-force tree with badge metadata, client build footer, and responsive brand theming (including fallback nav items).


Shared MUI table shell (central-app/app/src/Openreach - App/App - Shared Components/MUI - Table/MUI Table - Table Shell.tsx)
- MUI primitives: `Paper`, `Stack`, `Typography`, `Switch`, `Box`, `DataGrid`, `GridToolbarQuickFilter`, `GridPagination`, `GridFooterContainer`.
- Custom work: Density toggle context, guarded header checkbox interaction, optional quick filter toolbar, configurable empty state slot. As of Jan 2026, custom horizontal wheel handler was removed in favor of standard MUI DataGrid scroll behavior. Default row lines are now restored for better accessibility and clarity. Table header/footer and row colors are theme-driven for improved separation and UX, with all color tokens managed in `theme.ts`.

Selection helper (central-app/app/src/Openreach - App/App - Shared Components/MUI - Table/MUI Table - Selection Logic.ts)
- MUI primitives: `GridRowSelectionModel`, `GridCallbackDetails` from `@mui/x-data-grid`.
- Custom work: Keyboard-aware selection manager providing single-select by default with Ctrl/Cmd multi-select and Shift range selection.

Selection helper documentation (Central Library/Application - Logic/Selection Logic)
- Outline: Purpose, behaviours, modifier handling, integration checklist, and testing guidance.
- Custom notes: Explains how the hook reads visible row order from the DataGrid API and why anchor tracking matters for consistent Shift selection.

Task filter + date window (central-app/app/src/Openreach - App/App - Shared Components/MUI - Table/MUI Table - Task Filter Component.tsx)